# chat-app-axum

./: Cargo.toml  README.md
src/: lib.rs
static/: 404.html  index.html  main.css  main.js
